Добавлены: -WPF-приложение - сервер службы WCF; -WPF-приложение - клиент чата.

--- a/ChatServiceLibrary/App.config
+++ b/ChatServiceLibrary/App.config
@@ -12,15 +12,13 @@
   <system.serviceModel>
     <services>
       <service name="ChatServiceLibrary.ChatService">
-        <endpoint address="" binding="basicHttpBinding" contract="ChatServiceLibrary.IChatService">
-          <identity>
-            <dns value="localhost" />
-          </identity>
-        </endpoint>
+        
         <endpoint address ="" binding="netTcpBinding" contract="ChatServiceLibrary.IChatService" />
+        <endpoint address ="" binding="wsDualHttpBinding" contract="ChatServiceLibrary.IChatService" />
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
         <host>
           <baseAddresses>
+            <add baseAddress="net.tcp://localhost:8040/Chat"/>
             <add baseAddress="http://localhost:8733/Design_Time_Addresses/ChatServiceLibrary/Service1/" />
           </baseAddresses>
         </host>
