--- a/DataBaseLibrary/DataBaseLibrary.csproj
+++ b/DataBaseLibrary/DataBaseLibrary.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Room.cs" />
     <Compile Include="User.cs" />
+    <Compile Include="XData.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
